# Actix-Websocket-Test

./: .gitignore  README.md
api-server/: .gitignore  Cargo.toml  build.rs  main_config.json
api-server/src/: actions.rs  data.rs  lobby.rs  main.rs  messages.rs  protobuf_messages.rs  start_connection.rs  web_sockets.rs  ws_clients.rs  ws_server.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/dtos/: complete.ts  helper.ts  machine.ts  machine_id.ts  machine_type.ts  main.ts  production_line.ts  shared_values.ts  ws_message.ts
frontend/src/dtos/google/protobuf/: timestamp.ts
frontend/src/modules/: api.ts  helper.ts
protobuf/: complete.proto  helper.proto  machine.proto  machine_id.proto  machine_type.proto  main.proto  production_line.proto  shared_values.proto  ws_message.proto
