[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
prost-wkt = "0.3"
prost-wkt-types = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = { version = "4.0.1", features = ["rustls"]}
env_logger = { version = "0.9.0"}
actix-cors = { version = "0.6.1"}
actix = { version = "0.13.0"}
actix-web-actors = "4.1.0"
actix-broker = "0.4.2"
uuid = { version = "0.8", features = ["v4", "serde"] }
tokio = "1.17.0"
log = "0.4"
rand = "0.8"

[build-dependencies]
prost-build = "0.9"
prost-wkt-build = "0.3"